crates/parser/tests/fixtures/bad/syntax_error.dl
.decl edge(x: number, y: number
